trunk/Archive2/6d/b645b93a1b52f6/output
main.cpp:2:28: error: use of undeclared identifier 'gl'
    t1d = underlying_value(gl::GL_TEXTURE_1D),
                           ^
main.cpp:3:25: error: use of undeclared identifier 'gl'
        t2d = underlying_value(gl::GL_TEXTURE_2D),
                               ^
main.cpp:4:25: error: use of undeclared identifier 'gl'
        t3d = underlying_value(gl::GL_TEXTURE_3D),
                               ^
main.cpp:5:31: error: use of undeclared identifier 'gl'
        t1d_array = underlying_value(gl::GL_TEXTURE_1D_ARRAY),
                                     ^
main.cpp:6:31: error: use of undeclared identifier 'gl'
        t2d_array = underlying_value(gl::GL_TEXTURE_2D_ARRAY),
                                     ^
main.cpp:7:32: error: use of undeclared identifier 'gl'
        trectangle = underlying_value(gl::GL_TEXTURE_RECTANGLE),
                                      ^
main.cpp:8:31: error: use of undeclared identifier 'gl'
        tcube_map = underlying_value(gl::GL_TEXTURE_CUBE_MAP),
                                     ^
main.cpp:9:37: error: use of undeclared identifier 'gl'
        tcube_map_array = underlying_value(gl::GL_TEXTURE_CUBE_MAP_ARRAY),
                                           ^
main.cpp:10:29: error: use of undeclared identifier 'gl'
        tbuffer = underlying_value(gl::GL_TEXTURE_BUFFER),
                                   ^
main.cpp:11:37: error: use of undeclared identifier 'gl'
        t2d_multisample = underlying_value(gl::GL_TEXTURE_2D_MULTISAMPLE),
                                           ^
main.cpp:12:43: error: use of undeclared identifier 'gl'
        t2d_multisample_array = underlying_value(gl::GL_TEXTURE_2D_MULTISAMPLE_ARRAY)
                                                 ^
11 errors generated.
